--- a/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
@@ -71,7 +71,7 @@
 				<ui:remove>
 					<p:commandButton styleClass="list-row-button"
 						icon="ui-icon-mail-closed"
-						action="#{mailSender.notifyDeadline(installment, false)}">
+						action="#{mailSender.notifyDeadline(installment)}">
 					</p:commandButton>
 				</ui:remove>
 
