--- a/Jama/src/main/webapp/resources/dialogs/chiefDialog.xhtml
+++ b/Jama/src/main/webapp/resources/dialogs/chiefDialog.xhtml
@@ -2,7 +2,7 @@
 	xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui" xmlns:composite="http://java.sun.com/jsf/composite">
 
 <composite:interface>
-	<composite:attribute name="name"></composite:attribute>
+	<composite:attribute name="name" />
 
 </composite:interface>
 
@@ -29,9 +29,9 @@
 
 			</h:panelGrid>
 
-			<p:commandButton type="button" onclick="w_chiefDialog.hide();" value="#{msgs.cancel}" />
+			<p:commandButton type="button" onclick="#{cc.attrs.name}.hide();" value="#{msgs.cancel}" />
 			<p:commandButton process="@form" value="#{msgs.save}" actionListener="#{chiefDialogPCB.save()}" update="@form :#{p:component('chiefMenu')}"
-				oncomplete="if (!args.validationFailed) {w_chiefDialog.hide();}" />
+				oncomplete="if (!args.validationFailed) { #{cc.attrs.name}.hide(); }" />
 
 		</h:form>
 
