--- a/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
@@ -1,30 +1,26 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:composite="http://java.sun.com/jsf/composite"
-	xmlns:sections="http://java.sun.com/jsf/composite/sections">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui" xmlns:composite="http://java.sun.com/jsf/composite"
+	xmlns:sections="http://java.sun.com/jsf/composite/sections" xmlns:dialogs="http://java.sun.com/jsf/composite/dialogs">
 
 <composite:interface>
-	<composite:attribute name="editingDisable"></composite:attribute>
-	<composite:attribute name="installmentOutcome"></composite:attribute>
+	<composite:attribute name="editingDisable" />
+	<composite:attribute name="installmentOutcome" />
+	<composite:attribute name="panelId" type="java.lang.String" required="true" />
+	<composite:attribute name="dialogWidgetVar" type="java.lang.String"  required="true"/>
+	<composite:attribute name="dialogId" type="java.lang.String" required="true" />
 
 </composite:interface>
 
-<composite:implementation
-	xmlns:sections="http://java.sun.com/jsf/composite/sections">
+<composite:implementation xmlns:sections="http://java.sun.com/jsf/composite/sections">
 
 	<h:outputStylesheet name="table.css" library="css" />
 	<h:outputStylesheet name="home.css" library="css" />
 
 	<p:growl autoUpdate="true" />
 
-	<p:panel styleClass="semiEmptyPanel relative">
-		<p:dataTable id="installmentTable" styleClass="hideShow"
-			selectionMode="single" rowKey="#{installment.id}" var="installment"
-			value="#{contractManager.contract.installments}"
-			emptyMessage="#{msgs.noInstallmentFound}">
+	<p:panel id="#{cc.attrs.panelId}" styleClass="semiEmptyPanel relative">
+		<p:dataTable id="installmentTable" styleClass="hideShow" selectionMode="single" rowKey="#{installment.id}" var="installment"
+			value="#{contractManager.contract.installments}" emptyMessage="#{msgs.noInstallmentFound}">
 
 			<p:column headerText="#{msgs.date}">
 				<h:outputText value="#{installment.date}">
@@ -39,39 +35,21 @@
 			</p:column>
 
 			<p:column headerText="#{msgs.paidInvoice_Question}">
-				<h:selectBooleanCheckbox value="#{installment.paidInvoice}"
-					disabled="true" />
+				<h:selectBooleanCheckbox value="#{installment.paidInvoice}" disabled="true" />
 
-				<p:commandButton styleClass="list-row-button" icon="ui-icon-search"
-					action="#{installmentWizardPB.viewInstallment()}">
-					<f:setPropertyActionListener
-						target="#{installmentWizardPB.returnPage}"
-						value="#{cc.attrs.installmentOutcome}"></f:setPropertyActionListener>
-					<f:setPropertyActionListener value="#{installment}"
-						target="#{installmentManager.selectedInstallment}" />
+				<p:commandButton styleClass="list-row-button" icon="ui-icon-search" action="#{installmentWizardPB.viewInstallment()}">
+					<f:setPropertyActionListener value="#{installment}" target="#{installmentManager.selectedInstallment}" />
 				</p:commandButton>
-				<p:commandButton styleClass="list-row-button" icon="ui-icon-wrench"
-					action="#{installmentWizardPB.editInstallment()}"
+				<p:commandButton styleClass="list-row-button" icon="ui-icon-wrench" action="#{installmentWizardPB.editInstallment()}"
 					rendered="#{cc.attrs.editingDisable==false}">
-					<f:setPropertyActionListener
-						target="#{installmentWizardPB.returnPage}"
-						value="#{cc.attrs.installmentOutcome}"></f:setPropertyActionListener>
-					<f:setPropertyActionListener value="#{installment}"
-						target="#{installmentManager.selectedInstallment}" />
+					<f:setPropertyActionListener value="#{installment}" target="#{installmentManager.selectedInstallment}" />
 				</p:commandButton>
-				<p:commandButton styleClass="list-row-button" icon="ui-icon-trash"
-					oncomplete="delete_confirm.show();"
+				<p:commandButton styleClass="list-row-button" icon="ui-icon-trash" oncomplete="delete_confirm.show();"
 					rendered="#{cc.attrs.editingDisable==false}">
-					<f:setPropertyActionListener
-						target="#{installmentWizardPB.returnPage}"
-						value="#{cc.attrs.installmentOutcome}"></f:setPropertyActionListener>
-					<f:setPropertyActionListener value="#{installment}"
-						target="#{installmentManager.selectedInstallment}" />
+					<f:setPropertyActionListener value="#{installment}" target="#{installmentManager.selectedInstallment}" />
 				</p:commandButton>
 				<ui:remove>
-					<p:commandButton styleClass="list-row-button"
-						icon="ui-icon-mail-closed"
-						action="#{mailSender.notifyDeadline(installment, false)}">
+					<p:commandButton styleClass="list-row-button" icon="ui-icon-mail-closed" action="#{mailSender.notifyDeadline(installment, false)}">
 					</p:commandButton>
 				</ui:remove>
 
@@ -82,27 +60,26 @@
 		</p:dataTable>
 
 
-		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.remove}"
-			severity="alert" widgetVar="delete_confirm">
-			<p:commandButton value="#{msgs.yes}"
-				action="#{installmentWizardPB.deleteInstallment()}" immediate="true"
-				update="installmentTable" oncomplete="delete_confirm.hide();" />
-			<p:commandButton value="#{msgs.no}" onclick="delete_confirm.hide();"
-				type="button" />
+		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.remove}" severity="alert" widgetVar="delete_confirm">
+			<p:commandButton value="#{msgs.yes}" action="#{installmentWizardPB.deleteInstallment()}" immediate="true" update="installmentTable"
+				oncomplete="delete_confirm.hide();" />
+			<p:commandButton value="#{msgs.no}" onclick="delete_confirm.hide();" type="button" />
 		</p:confirmDialog>
 
+		<ui:remove>
+			<p:commandButton styleClass="addInstBtn" action="#{installmentManager.addInstallment()}" value="#{msgs.add_installment}" ajax="false"
+				immediate="true" rendered="#{cc.attrs.editingDisable == false}">
+			</p:commandButton>
+		</ui:remove>
 
-		<p:commandButton styleClass="addInstBtn"
-			action="#{installmentManager.addInstallment()}"
-			value="#{msgs.add_installment}" ajax="false" immediate="true"
-			rendered="#{cc.attrs.editingDisable == false}">
-			<f:setPropertyActionListener
-				target="#{installmentWizardPB.returnPage}"
-				value="#{cc.attrs.installmentOutcome}" />
+		<p:commandButton styleClass="addInstBtn" process="@this" actionListener="#{installmentWizardPB.addInstallment()}" value="#{msgs.add_installment}"
+			oncomplete="#{cc.attrs.dialogWidgetVar}.show()" update=":#{p:component(cc.attrs.dialogId)}" rendered="#{cc.attrs.editingDisable == false}">
+			<p:resetInput target=":#{p:component(cc.attrs.dialogId)}" />
 		</p:commandButton>
 
 
 		<br />
 	</p:panel>
+
 </composite:implementation>
 </html>
