fix tabella. Almeno una soddisfazione :'(

--- a/Jama/src/main/webapp/agreementEdit.xhtml
+++ b/Jama/src/main/webapp/agreementEdit.xhtml
@@ -28,7 +28,8 @@
 			</p:tab>
 
 			<p:tab id="tabInstallments" title="#{msgs.installmentsList_Tab}">
-				<sections:agreementInstallmentsList installmentOutcome="agreementEdit" editingDisable="false">
+				<sections:agreementInstallmentsList installmentOutcome="agreementEdit" editingDisable="false" dialogId="instDialog" dialogWidgetVar="w_instDialog"
+					panelId="contractInstTablePanel">
 				</sections:agreementInstallmentsList>
 
 
