inst dialog fix

--- a/Jama/src/main/webapp/resources/dialogs/instCreationDialog.xhtml
+++ b/Jama/src/main/webapp/resources/dialogs/instCreationDialog.xhtml
@@ -32,7 +32,8 @@
 					</p:tab>
 
 					<p:tab id="tabEnd" title="#{msgs.end__tab}">
-						<sections:installmentWizLastStep observingComponent="#{cc.attrs.observingComponent}" wizWidgetVar="#{cc.attrs.wizWidgetVar}" />
+						<sections:installmentWizLastStep observingComponent="#{cc.attrs.observingComponent}" wizWidgetVar="#{cc.attrs.wizWidgetVar}"
+							dialogWidgetVar="#{cc.attrs.dialogWidgetVar}" />
 					</p:tab>
 
 				</p:wizard>
