--- a/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
@@ -73,7 +73,8 @@
 		</ui:remove>
 
 		<p:commandButton styleClass="addInstBtn" process="@this" actionListener="#{installmentWizardPB.addInstallment()}" value="#{msgs.add_installment}"
-			oncomplete="#{cc.attrs.dialogWidgetVar}.show()" update=":#{p:component(cc.attrs.dialogId)}" rendered="#{cc.attrs.editingDisable == false}">
+			oncomplete="#{cc.attrs.dialogWidgetVar}.show()"
+			update=":#{p:component(cc.attrs.dialogId)}" rendered="#{cc.attrs.editingDisable == false}">
 			<p:resetInput target=":#{p:component(cc.attrs.dialogId)}" />
 		</p:commandButton>
 
