--- a/Jama/src/main/webapp/resources/sections/installmentWizLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizLastStep.xhtml
@@ -6,6 +6,7 @@
 <composite:interface>
 	<composite:attribute name="observingComponent" type="java.lang.String" required="true" />
 	<composite:attribute name="wizWidgetVar" required="true" />
+	<composite:attribute name="dialogWidgetVar" required="true" />
 </composite:interface>
 
 <composite:implementation>
@@ -21,9 +22,9 @@
 
 
 
-	<p:commandButton id="instSaveButton" styleClass="saveButton" icon="ui-icon-disk" process="@form" value="#{msgs.save}"
+	<p:commandButton id="instSaveButton" styleClass="saveButton" icon="ui-icon-disk" process="@this" value="#{msgs.save}"
 		actionListener="#{installmentWizardPB.save()}" update=":#{p:component(cc.attrs.observingComponent)}"
-		oncomplete="#{cc.attrs.wizWidgetVar}.loadStep(#{cc.attrs.wizWidgetVar}.cfg.steps[0], true); #{cc.attrs.name}.hide()" />
+		oncomplete="#{cc.attrs.wizWidgetVar}.loadStep(#{cc.attrs.wizWidgetVar}.cfg.steps[0], true); #{cc.attrs.dialogWidgetVar}.hide()" />
 
 	<p:blockUI block="instSaveButton" trigger="instSaveButton" />
 
