--- a/Jama/src/main/webapp/agreementView.xhtml
+++ b/Jama/src/main/webapp/agreementView.xhtml
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:sections="http://java.sun.com/jsf/composite/sections">
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:sections="http://java.sun.com/jsf/composite/sections"
+	xmlns:dialogs="http://java.sun.com/jsf/composite/dialogs">
 
 
 <h:head>
@@ -11,52 +12,48 @@
 
 <h:body onload="setHideShow();">
 
-	<h:panelGrid width="100%" columns="2" columnClasses="col1">
-		<h:form id="agreementWiz">
+	<h:form id="agreementWiz">
 
-			<input type="hidden" name="cid" value='#{contractManager.conversation.id}' />
+		<input type="hidden" name="cid" value='#{contractManager.conversation.id}' />
 
-			<p:tabView activeIndex="#{agreementEditPB.currentTabIndex}">
+		<p:tabView activeIndex="#{agreementEditPB.currentTabIndex}">
 
-				<p:tab id="tabDati" title="#{msgs.data_Tab}">
-					<sections:agreementWizData editingDisable="true" />
-				</p:tab>
+			<p:tab id="tabDati" title="#{msgs.data_Tab}">
+				<sections:agreementWizData editingDisable="true" />
+			</p:tab>
 
-				<ui:include src="/resources/sections/agreementWizData.xhtml" />
+			<ui:include src="/resources/sections/agreementWizData.xhtml" />
 
-				<p:tab id="tabRip" title="#{msgs.shareTable_Tab}">
-					<sections:agreementWizShareTable editingDisable="true" />
-				</p:tab>
+			<p:tab id="tabRip" title="#{msgs.shareTable_Tab}">
+				<sections:agreementWizShareTable editingDisable="true" />
+			</p:tab>
 
-				<p:tab id="tabInstallments" title="#{msgs.installmentsList_Tab}">
-					<sections:agreementInstallmentsList installmentOutcome="agreementView" editingDisable="true" dialogId="instDialog" dialogWidgetVar="w_instDialog"
-						panelId="contractInstTablePanel">
-					</sections:agreementInstallmentsList>
-				</p:tab>
+			<p:tab id="tabInstallments" title="#{msgs.installmentsList_Tab}">
+				<sections:agreementInstallmentsList editingDisable="true" viewDialogId="viewInstDialog" viewDialogWidgetVar="w_viewInstDialog"
+					panelId="contractInstTablePanel" />
+			</p:tab>
 
-				<p:tab id="tabRecap" title="#{msgs.recap_Tab}">
-					<ui:include src="/resources/sections/agreementRecap.xhtml" />
-				</p:tab>
+			<p:tab id="tabRecap" title="#{msgs.recap_Tab}">
+				<ui:include src="/resources/sections/agreementRecap.xhtml" />
+			</p:tab>
 
-				<p:tab id="tabAttachs" title="#{msgs.attachments_Tab}">
-					<sections:agreementWizAttachments editingDisable="#{userManager.loggedUser.hasRole('CHIEF_SCIENTIST')==false }">
-					</sections:agreementWizAttachments>
-				</p:tab>
+			<p:tab id="tabAttachs" title="#{msgs.attachments_Tab}">
+				<sections:agreementWizAttachments editingDisable="#{userManager.loggedUser.hasRole('CHIEF_SCIENTIST')==false }">
+				</sections:agreementWizAttachments>
+			</p:tab>
 
-			</p:tabView>
+		</p:tabView>
 
 
-			<p:commandButton value="#{msgs.previous}" action="#{agreementEditPB.cancel()}" ajax="false" />
+		<p:commandButton value="#{msgs.previous}" action="#{agreementEditPB.cancel()}" ajax="false" />
 
-			<ui:remove>
-				<p:commandButton action="#{contractManager.editContract()}" value="toEditMode" ajax="false"></p:commandButton>
-			</ui:remove>
+		<ui:remove>
+			<p:commandButton action="#{contractManager.editContract()}" value="toEditMode" ajax="false"></p:commandButton>
+		</ui:remove>
 
+	</h:form>
 
-
-
-		</h:form>
-	</h:panelGrid>
+	<dialogs:instDialog dialogWidgetVar="w_viewInstDialog" dialogId="viewInstDialog" wizWidgetVar="w_viewInstWiz" editingDisable="true" />
 
 </h:body>
 </html>
