--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -27,8 +27,9 @@
 			</p:tab>
 
 			<p:tab id="tabInstallments" title="#{msgs.installmentsList_Tab}">
-				<sections:agreementInstallmentsList installmentOutcome="agreementCreate" editingDisable="false" dialogId="instDialog"
-					dialogWidgetVar="w_instDialog" panelId="contractInstTablePanel" />
+				<sections:agreementInstallmentsList editingDisable="false" addDialogId="addInstDialog" addDialogWidgetVar="w_addInstDialog"
+					editDialogId="editInstDialog" editDialogWidgetVar="w_editInstDialog" viewDialogId="viewInstDialog" viewDialogWidgetVar="w_viewInstDialog"
+					panelId="contractInstTablePanel" />
 			</p:tab>
 
 			<p:tab id="tabAttachs" title="#{msgs.attachments_Tab}">
@@ -54,7 +55,12 @@
 
 	<dialogs:chiefDialog name="w_chiefDialog" />
 	<dialogs:companyDialog name="w_companyDialog" />
-	<dialogs:instCreationDialog dialogWidgetVar="w_instDialog" dialogId="instDialog" observingComponent="contractInstTablePanel" />
+	<dialogs:instDialog dialogWidgetVar="w_addInstDialog" dialogId="addInstDialog" wizWidgetVar="w_addInstWiz"
+		observingComponent="contractInstTablePanel" creating="true" />
+	<dialogs:instDialog dialogWidgetVar="w_editInstDialog" dialogId="editInstDialog" wizWidgetVar="w_editInstWiz"
+		observingComponent="contractInstTablePanel" editingDisable="false" />
+	<dialogs:instDialog dialogWidgetVar="w_viewInstDialog" dialogId="viewInstDialog" wizWidgetVar="w_viewInstWiz" editingDisable="true" />
+
 
 </h:body>
 </html>
