--- a/Jama/src/main/webapp/resources/sections/installmentWizLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizLastStep.xhtml
@@ -12,8 +12,7 @@
 <composite:implementation>
 
 	<h:outputStylesheet library="css" name="home.css" />
-	<h:outputText value="#{cc.attrs.wizWidgetVar}" />
-
+	
 	<p:panel styleClass="semiEmptyPanel">
 		<h:outputText value="#{msgs.instCongr} " />
 
@@ -23,7 +22,7 @@
 
 
 	<p:commandButton id="instSaveButton" styleClass="saveButton" icon="ui-icon-disk" process="@this" value="#{msgs.save}"
-		actionListener="#{installmentWizardPB.save()}" update=":#{p:component(cc.attrs.observingComponent)}"
+		actionListener="#{installmentManager.save()}" update=":#{p:component(cc.attrs.observingComponent)}"
 		oncomplete="#{cc.attrs.wizWidgetVar}.loadStep(#{cc.attrs.wizWidgetVar}.cfg.steps[0], true); #{cc.attrs.dialogWidgetVar}.hide()" />
 
 	<p:blockUI block="instSaveButton" trigger="instSaveButton" />
