--- a/Jama/src/main/webapp/resources/dialogs/instDialog.xhtml
+++ b/Jama/src/main/webapp/resources/dialogs/instDialog.xhtml
@@ -7,7 +7,7 @@
 <composite:interface>
 	<composite:attribute name="dialogWidgetVar" required="true" />
 	<composite:attribute name="dialogId" required="true" />
-	<composite:attribute name="wizWidgetVar" required="true"/>
+	<composite:attribute name="wizWidgetVar" required="true" />
 
 	<composite:attribute name="editingDisable" default="true" />
 	<composite:attribute name="creating" default="false" />
@@ -16,9 +16,12 @@
 
 <composite:implementation>
 
+	<h:outputScript library="js" name="instDialogScripts.js" />
+
+
 	<p:dialog id="#{cc.attrs.dialogId}" widgetVar="#{cc.attrs.dialogWidgetVar}" modal="true" height="400px">
 
-		<h:form >
+		<h:form>
 
 			<input type="hidden" name="cid" value='#{contractManager.conversation.id}' />
 
@@ -39,7 +42,7 @@
 
 			</p:wizard>
 
-			<p:tabView widgetVar="#{cc.attrs.wizWidgetVar}" rendered="#{not cc.attrs.creating}">
+			<p:tabView id="instEditTabView" widgetVar="#{cc.attrs.wizWidgetVar}" rendered="#{not cc.attrs.creating}">
 
 				<p:tab id="tabDati" title="#{msgs.data_Tab}">
 					<sections:installmentWizData editingDisable="#{cc.attrs.editingDisable}" />
@@ -49,16 +52,16 @@
 					<sections:installmentWizShareTable editingDisable="#{cc.attrs.editingDisable}" />
 				</p:tab>
 
-				<p:tab id="tabEnd" title="#{msgs.end__tab}" rendered="#{not cc.attrs.editingDisable}">
-					<sections:installmentWizLastStep observingComponent="#{cc.attrs.observingComponent}" wizWidgetVar="#{cc.attrs.wizWidgetVar}"
-						dialogWidgetVar="#{cc.attrs.dialogWidgetVar}" />
-				</p:tab>
-
 			</p:tabView>
 
 
 			<p:commandButton value="#{msgs.cancel}" process="@this" actionListener="#{installmentManager.cancel()}" immediate="true"
-				oncomplete="#{cc.attrs.wizWidgetVar}.loadStep(#{cc.attrs.wizWidgetVar}.cfg.steps[0], true); #{cc.attrs.dialogWidgetVar}.hide();" />
+				oncomplete="toFirstTab(#{cc.attrs.wizWidgetVar}); #{cc.attrs.dialogWidgetVar}.hide(); setHideShow();" />
+
+			<p:commandButton id="instSaveButton" styleClass="saveButton" icon="ui-icon-disk" value="#{msgs.save}" actionListener="#{installmentManager.save}"
+				process="instEditTabView" update="instEditTabView :#{p:component(cc.attrs.observingComponent)}"
+				oncomplete="if(!args.validationFailed){ toFirstTab(#{cc.attrs.wizWidgetVar}); #{cc.attrs.dialogWidgetVar}.hide(); setHideShow();}"
+				rendered="#{not(cc.attrs.editingDisable or cc.attrs.creating)}" />
 
 		</h:form>
 
