--- a/Jama/src/main/webapp/resources/sections/installmentWizLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizLastStep.xhtml
@@ -12,18 +12,15 @@
 <composite:implementation>
 
 	<h:outputStylesheet library="css" name="home.css" />
-	
+
 	<p:panel styleClass="semiEmptyPanel">
 		<h:outputText value="#{msgs.instCongr} " />
-
-
 	</p:panel>
 
 
-
-	<p:commandButton id="instSaveButton" styleClass="saveButton" icon="ui-icon-disk" process="@this" value="#{msgs.save}"
-		actionListener="#{installmentManager.save()}" update=":#{p:component(cc.attrs.observingComponent)}"
-		oncomplete="#{cc.attrs.wizWidgetVar}.loadStep(#{cc.attrs.wizWidgetVar}.cfg.steps[0], true); #{cc.attrs.dialogWidgetVar}.hide()" />
+	<p:commandButton id="instSaveButton" styleClass="saveButton" icon="ui-icon-disk" value="#{msgs.save}" actionListener="#{installmentManager.save()}"
+		update=":#{p:component(cc.attrs.observingComponent)}"
+		oncomplete="if(!args.validationFailed){toFirstTab(#{cc.attrs.wizWidgetVar}); #{cc.attrs.dialogWidgetVar}.hide(); setHideShow();}" />
 
 	<p:blockUI block="instSaveButton" trigger="instSaveButton" />
 
