pulizia log eccezioni

--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -63,7 +63,7 @@
 							<p:commandButton action="#{userEditor.createUser()}" value="#{msgs.create_user}"  styleClass="buttons" />
 						</p:column>
 						<p:column>
-							<p:button value="#{msgs.view_users}"  styleClass="buttons" />
+							<p:button outcome="userList" value="#{msgs.view_users}"  styleClass="buttons" />
 						</p:column>
 					</p:row>
 				</p:panelGrid>
