--- a/Jama/src/main/webapp/agreementView.xhtml
+++ b/Jama/src/main/webapp/agreementView.xhtml
@@ -53,7 +53,7 @@
 
 	</h:form>
 
-	<dialogs:instDialog dialogWidgetVar="w_viewInstDialog" dialogId="viewInstDialog" wizWidgetVar="w_viewInstWiz" editingDisable="true" />
+	<dialogs:instViewDialog dialogWidgetVar="w_viewInstDialog" dialogId="viewInstDialog" wizWidgetVar="w_viewInstWiz" editingDisable="true" />
 
 </h:body>
 </html>
