--- a/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
@@ -19,6 +19,10 @@
 
 <composite:implementation xmlns:sections="http://java.sun.com/jsf/composite/sections">
 
+	<script>
+    	jQuery(document).ready(function() {setHideShow();});
+	</script>
+
 	<h:outputStylesheet name="table.css" library="css" />
 	<h:outputStylesheet name="home.css" library="css" />
 
