--- a/Jama/src/main/webapp/notAuthorized.xhtml
+++ b/Jama/src/main/webapp/notAuthorized.xhtml
@@ -3,6 +3,6 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:sections="http://java.sun.com/jsf/composite/sections">
 
 
-<sections:login messagesEnabled="false" />
+<sections:login messagesEnabled="true" />
 
 </html>
