--- a/Jama/src/main/webapp/resources/dialogs/instViewDialog.xhtml
+++ b/Jama/src/main/webapp/resources/dialogs/instViewDialog.xhtml
@@ -18,7 +18,7 @@
 	<h:outputScript library="js" name="instDialogScripts.js" />
 
 
-	<p:dialog id="#{cc.attrs.dialogId}" widgetVar="#{cc.attrs.dialogWidgetVar}" modal="true" height="400px">
+	<p:dialog id="#{cc.attrs.dialogId}" widgetVar="#{cc.attrs.dialogWidgetVar}" modal="true" minHeight="800" minWidth="700">
 
 		<h:form>
 
