--- a/Jama/src/main/webapp/userList.xhtml
+++ b/Jama/src/main/webapp/userList.xhtml
@@ -1,25 +1,51 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:sections="http://java.sun.com/jsf/composite/sections"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://primefaces.org/ui" xmlns:sections="http://java.sun.com/jsf/composite/sections"
 	xmlns:dialogs="http://java.sun.com/jsf/composite/dialogs">
 <h:head>
 </h:head>
 
-<body>
+<h:body>
+	<h:form>
+		<input type="hidden" name="cid" value='#{userTablePC.conversation.id}' />
 
-<p:panel id="usrPanel">
-		<p:dataTable >
+		<p:panel>
 
-		</p:dataTable>
+			<p:dataTable id="userTable" emptyMessage="#{msgs.noUserFound}" lazy="true" value="#{userTablePC.lazyModel}" var="user" paginator="true" rows="20"
+				rowsPerPageTemplate="1,20,50" paginatorTemplate="{RowsPerPageDropdown} {PreviousPageLink} {NextPageLink}">
 
-	</p:panel>
+				<p:column headerText="#{msgs.serialNumber}">
+					<h:outputText value="#{user.serialNumber}" />
+				</p:column>
 
+				<p:column headerText="#{msgs.surname}">
+					<h:outputText value="#{user.surname}" />
+				</p:column>
 
-</body>
+				<p:column headerText="#{msgs.name}">
+					<h:outputText value="#{user.name}" />
+				</p:column>
+
+				<p:column headerText="#{msgs.role}">
+					<h:outputText value="#{user.role.displayString}" />
+				</p:column>
+
+				<p:column headerText="#{msgs.department}">
+					<h:outputText value="#{user.belongingDepts.get(0).displayName}" />
+				</p:column>
+
+				<p:column headerText="#{msgs.email}">
+					<h:outputText value="#{user.email}" />
+				</p:column>
+
+			</p:dataTable>
+
+		</p:panel>
+
+		<p:commandButton action="#{userTablePC.backToHome()}" value="#{msgs.home}" immediate="true" />
+	</h:form>
+
+</h:body>
 
 
 </html>
