--- a/Jama/src/main/webapp/resources/dialogs/instCreateDialog.xhtml
+++ b/Jama/src/main/webapp/resources/dialogs/instCreateDialog.xhtml
@@ -16,7 +16,7 @@
 
 	<h:outputScript library="js" name="instDialogScripts.js" />
 
-	<p:dialog id="#{cc.attrs.dialogId}" widgetVar="#{cc.attrs.dialogWidgetVar}" modal="true" minHeight="700" minWidth="800">
+	<p:dialog id="#{cc.attrs.dialogId}" widgetVar="#{cc.attrs.dialogWidgetVar}" modal="true" minHeight="500" minWidth="800" draggable="false">
 
 		<h:form>
 
