--- a/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
@@ -26,7 +26,7 @@
 	<h:outputStylesheet name="table.css" library="css" />
 	<h:outputStylesheet name="home.css" library="css" />
 
-	<p:growl autoUpdate="true" />
+	<p:growl autoUpdate="true" for="#{cc.attrs.panelId}" />
 
 	<p:panel id="#{cc.attrs.panelId}" styleClass="semiEmptyPanel relative">
 		<p:dataTable id="installmentTable" styleClass="hideShow" selectionMode="single" rowKey="#{installment.id}" var="installment"
@@ -67,7 +67,7 @@
 
 		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.remove}" severity="alert" widgetVar="delete_confirm">
 			<p:commandButton value="#{msgs.yes}" action="#{installmentManager.deleteInstallment()}" immediate="true" update="installmentTable"
-				oncomplete="delete_confirm.hide();" />
+				oncomplete="delete_confirm.hide(); setHideShow();" />
 			<p:commandButton value="#{msgs.no}" onclick="delete_confirm.hide();" type="button" />
 		</p:confirmDialog>
 
