--- a/Jama/src/main/webapp/resources/dialogs/instViewDialog.xhtml
+++ b/Jama/src/main/webapp/resources/dialogs/instViewDialog.xhtml
@@ -16,11 +16,18 @@
 <composite:implementation>
 
 	<h:outputScript library="js" name="instDialogScripts.js" />
+	<h:outputScript library="js" name="onEnterPressInWiz.js" />
 
+	<h:form>
 
-	<p:dialog id="#{cc.attrs.dialogId}" widgetVar="#{cc.attrs.dialogWidgetVar}" modal="true" minHeight="500" minWidth="800" draggable="false">
+		<p:remoteCommand name="closeInstViewDiag" actionListener="#{installmentManager.cancel()}" immediate="true" />
 
-		<h:form>
+		<p:dialog id="#{cc.attrs.dialogId}" widgetVar="#{cc.attrs.dialogWidgetVar}" modal="true" height="650" width="900"
+			onShow="toFirstTab(#{cc.attrs.wizWidgetVar});">
+
+			<p:ajax event="close" onstart="closeInstViewDiag();" oncomplete="toFirstTab(#{cc.attrs.wizWidgetVar}); setHideShow();" />
+
+			<p:growl autoUpdate="true" sticky="true" />
 
 			<input type="hidden" name="cid" value='#{contractManager.conversation.id}' />
 
@@ -36,17 +43,20 @@
 
 			</p:tabView>
 
+			<ui:remove>
+				<p:commandButton value="#{msgs.cancel}" process="@this" actionListener="#{installmentManager.cancel()}" immediate="true"
+					oncomplete="toFirstTab(#{cc.attrs.wizWidgetVar}); #{cc.attrs.dialogWidgetVar}.hide(); setHideShow();" />
+			</ui:remove>
 
-			<p:commandButton value="#{msgs.cancel}" process="@this" actionListener="#{installmentManager.cancel()}" immediate="true"
-				oncomplete="toFirstTab(#{cc.attrs.wizWidgetVar}); #{cc.attrs.dialogWidgetVar}.hide(); setHideShow();" />
+			<p:commandButton value="#{msgs.cancel}" process="@this" immediate="true" oncomplete="#{cc.attrs.dialogWidgetVar}.hide();" />
 
 			<p:commandButton id="instSaveButton" styleClass="saveButton" icon="ui-icon-disk" value="#{msgs.save}" actionListener="#{installmentManager.save()}"
 				process="@form" update="instEditTabView :#{p:component(cc.attrs.observingComponent)}" rendered="#{not cc.attrs.editingDisable}"
 				oncomplete="if(!args.validationFailed){ toFirstTab(#{cc.attrs.wizWidgetVar}); #{cc.attrs.dialogWidgetVar}.hide(); setHideShow();}" />
 
-		</h:form>
 
-	</p:dialog>
+		</p:dialog>
+	</h:form>
 
 </composite:implementation>
 </html>
