--- a/Jama/src/main/webapp/resources/sections/installmentWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizData.xhtml
@@ -21,7 +21,7 @@
 
 					<h:inputText id="taxableAmount" value="#{installmentManager.installment.wholeTaxableAmount}" label="#{msgs.amount}" required="true">
 						<f:validator binding="#{moneyValidator}" />
-						<p:ajax process="@this" update="amount taxAmountError" />
+						<p:ajax process="@this" update="amount" />
 					</h:inputText>
 				</p:column>
 
@@ -29,11 +29,6 @@
 					<h:outputText id="taxableAmount_o" value="#{installmentManager.installment.wholeTaxableAmount}">
 						<f:attribute name="plain" value="false" />
 					</h:outputText>
-				</p:column>
-
-				<p:column>
-
-					<p:message id="taxAmountError" styleClass="errorMessage" for="taxableAmount" />
 				</p:column>
 
 			</p:row>
@@ -45,14 +40,11 @@
 				<p:column rendered="#{cc.attrs.editingDisable == false}">
 					<h:inputText id="iva" value="#{installmentManager.installment.IVA_amount}" label="#{msgs.newInstIva}" required="true">
 						<f:validator binding="#{percentValidator}" />
-						<f:ajax execute="@this" render="amount ivaError" />
+						<p:ajax process="@this" update="amount" />
 					</h:inputText>
 				</p:column>
 				<p:column rendered="#{cc.attrs.editingDisable == true}">
 					<h:outputText id="iva_o" value="#{installmentManager.installment.IVA_amount}" />
-				</p:column>
-				<p:column>
-					<p:message id="ivaError" styleClass="errorMessage" for="iva" />
 				</p:column>
 			</p:row>
 
@@ -64,9 +56,6 @@
 					<h:outputText id="amount" value="#{installmentManager.installment.wholeAmount}" readonly="true">
 						<f:attribute name="plain" value="false" />
 					</h:outputText>
-				</p:column>
-				<p:column>
-					<p:message for="amount" />
 				</p:column>
 			</p:row>
 
@@ -86,9 +75,6 @@
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</h:outputText>
 				</p:column>
-
-				<p:message styleClass="errorMessage" for="date" />
-
 			</p:row>
 
 
@@ -102,10 +88,6 @@
 
 				<p:column rendered="#{cc.attrs.editingDisable == true}">
 					<h:outputText id="voucherNumber_o" value="#{installmentManager.installment.voucherNumber}" />
-				</p:column>
-
-				<p:column>
-					<p:message for="voucherNumber" />
 				</p:column>
 			</p:row>
 
@@ -125,10 +107,6 @@
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</h:outputText>
 				</p:column>
-
-				<p:column>
-					<p:message styleClass="errorMessage" for="voucherDate" />
-				</p:column>
 			</p:row>
 
 			<p:row rendered="agreementWizardPB.renderIvaComponents()==true">
@@ -144,10 +122,6 @@
 				<p:column rendered="#{cc.attrs.editingDisable == true }">
 					<h:outputText id="ivaVoucherNumber_o" value="#{installmentManager.installment.ivaVoucherNumber}" />
 				</p:column>
-
-				<p:column>
-					<p:message for="ivaVoucherNumber" />
-				</p:column>
 			</p:row>
 
 
@@ -162,10 +136,9 @@
 				<p:column rendered="#{cc.attrs.editingDisable == true}">
 					<h:outputText id="pendingNumber_o" value="#{installmentManager.installment.pendingNumber}" />
 				</p:column>
-				<p:column>
-					<p:message for="pendingNumber" />
-				</p:column>
 			</p:row>
+			
+			
 			<p:row>
 				<p:column>
 					<h:outputText value="#{msgs.newInstInvoiceNumber}:" />
@@ -176,9 +149,6 @@
 
 				<p:column rendered="#{cc.attrs.editingDisable == true}">
 					<h:outputText id="invoiceNumber_o" value="#{installmentManager.installment.invoiceNumber}" />
-				</p:column>
-				<p:column>
-					<p:message for="invoiceNumber" />
 				</p:column>
 			</p:row>
 
@@ -197,9 +167,6 @@
 					<h:outputText id="invoiceDate_o" value="#{installmentManager.installment.invoiceDate}">
 						<f:convertDateTime type="date" pattern="dd/MM/yyyy" />
 					</h:outputText>
-				</p:column>
-				<p:column>
-					<p:message for="invoiceDate" />
 				</p:column>
 			</p:row>
 
@@ -235,15 +202,11 @@
 				<p:column rendered="#{cc.attrs.editingDisable == true}">
 					<h:outputText id="notes_o" value="#{installmentManager.installment.note}" />
 				</p:column>
-				<p:column>
-					<p:message for="notes" />
-				</p:column>
 			</p:row>
 
 			<p:row>
 				<p:column colspan="3">
-					<p:message styleClass="errorMessage" for="amountCheck" />
-					<h:inputHidden value="needed" id="amountCheck" validator="#{instDataPB.validateAmount}" />
+					<h:inputHidden value="needed" id="amountCheck" validator="#{instDataPB.validateAmount}"  />
 				</p:column>
 			</p:row>
 
